    descriptive.
 * Added a bunch of fields to item_issues: reported_by, resolved_by, comments
    and status.
 * Renamed issues_count to item_issues_count.
 * Made related changes to issues search and citation.
 * Rendering issues only shows open issues.
 
======================================================================
2008-04-03 - EPRINTS-3.1-beta-1
======================================================================

2008-04-03 cjg
 * EPrint & Document URI's now correctly redirect to the appropriate URL.

2008-04-03 cjg
 * Added user.username and user.name to the staff eprint serach. Closing
    #3236

2008-04-03 cjg
 * Added "views.timestamp" to work like abstracts.timestamp
 * Added regenerate views and regenerate abstracts buttons.

2008-04-03 cjg
 * Added renderer to extras to link DOI's if spotted in value.

2008-04-05 cjg
 * Added a plugin to export history as ical. 
 * Added a history citation to fix a bug that appears to have been 
    introduced by the citation auto-reloader.

2008-04-05 cjg
 * Made a <label> tag surround the checkbox and label in the respond 
    to request screen.

2008-04-05 cjg
 * In History search, now searches username not userid.

2008-04-05 cjg
 * Added (slightly shonky) plugin to convert .doc to .pdf

2008-04-05 cjg
 * Added an optional /plugins/ directory to the repository cfg directory.

2008-04-05 cjg 
 * Some minor bugfixes to remove newlines from abstracts in some export
    formats.

2008-04-05 cjg
 * Added a new field to user: roles, which assigns new roles or privs to
    individual users.
 * Added a config option for creating new roles, or overriding existing
    ones. This can be used to create "hats" to assign to people.

2008-04-06 cjg
 * Changed view-eprint icon to a magnifying glass.

2008-04-06 cjg
 * Made an improvement to warnings and errors so it now shows file and
    line number.

2008-04-06 cjg
 * Added 'refresh views' option to epadmin. Exactly like refresh abstracts.