@@ -7299,3 +7299,8 @@ PACKAGE: 2.2.99.2
 
 2008-04-06 cjg
  * Added 'refresh views' option to epadmin. Exactly like refresh abstracts.
+
+2008-04-07 cjg
+ * Changed priv config format to be an array of values. With :editor and
+    :owner indicatng editor or owner only privs. This gets rid of the 2,4,8
+    stuff. The revision makes it easier to understand.
